--- a/named/named.conf
+++ b/named/named.conf
@@ -46,7 +46,7 @@ zone "." IN {
 
 zone "docker" IN {
 	type master;  
-	file "named.docker";     // 自定义的域名到IP的正向解析配置  
+	file "named.docker";
 };
 
 include "/etc/named.rfc1912.zones";
