--- a/named/named.conf
+++ b/named/named.conf
@@ -22,8 +22,8 @@ options {
 		202.96.128.68;
 	};
 
-	dnssec-enable yes;
-	dnssec-validation yes;
+	dnssec-enable no;
+	dnssec-validation no;
 	dnssec-lookaside auto;
 
 	/* Path to ISC DLV key */
